--- a/pixiewps/Makefile
+++ b/pixiewps/Makefile
@@ -11,7 +11,7 @@ PKG_NAME:=pixiewps
 PKG_VERSION:=master
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).zip
+#PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).zip
 PKG_SOURCE_URL:=https://github.com/wiire-a/pixiewps.git
 PKG_MD5SUM:=75453b8646f28873de05c083a60b6a69
 PKG_LICENSE:=GPL-2.0
